--- a/docs/use-the-network/devices/ready-to-use/mcf88/mcf-lw06davpk.mdx
+++ b/docs/use-the-network/devices/ready-to-use/mcf88/mcf-lw06davpk.mdx
@@ -22,8 +22,8 @@ Davis Vantage interface with PM
 
 ### Resources
 
-- [Product Page](https://www.mcf88.it/prodotto/mcf-lw06davk/)
-- [Datasheet](https://www.mcf88.it/wp-content/uploads/2020/07/MCF-LWWS06DAVK_DAVKP.pdf)
+- [Product Page](https://enginko.com/en/solutions/mcf-lw06davk/)
+- [Datasheet](https://enginko.com/wp-content/uploads/2020/09/MCF-LWWS06DAVK_DAVKP.pdf)
 
 ### Specifications
 
