Update and rename mcf-lw12co2.mdx to mcf-lw12co2e.mdx

--- a/docs/use-the-network/devices/ready-to-use/mcf88/mcf-lw12co2e.mdx
+++ b/docs/use-the-network/devices/ready-to-use/mcf88/mcf-lw12co2e.mdx
@@ -1,16 +1,16 @@
 ---
-id: mcf-lw12co2
+id: mcf-lw12co2e
 hide_title: true
-title: MCF-LW12CO2
+title: MCF-LW12CO2E
 description: Indoor environmental VOC & LUX & CO2
 image: img/use-the-network/devices/ready-to-use/mcf88/mcf-lw12co2.jpg
-sidebar_label: MCF-LW12CO2
-slug: /use-the-network/devices/ready-to-use/mcf88/mcf-lw12co2
+sidebar_label: MCF-LW12CO2E
+slug: /use-the-network/devices/ready-to-use/mcf88/mcf-lw12co2e
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-## MCF-LW12CO2
+## MCF-LW12CO2E
 
 Indoor environmental VOC & LUX & CO2
 
@@ -22,8 +22,8 @@ Indoor environmental VOC & LUX & CO2
 
 ### Resources
 
-- [Product Page](https://www.mcf88.it/prodotto/mcf-lw12co2/)
-- [Datasheet](https://www.mcf88.it/wp-content/uploads/2020/07/MCF-LW12CO2.pdf)
+- [Product Page](https://enginko.com/en/solutions/mcf-lw12co2/)
+- [Datasheet](https://enginko.com/wp-content/uploads/2020/09/ENGINKO_datasheet-layout_MCF-LW12CO2E_ENG.pdf)
 
 ### Specifications
 
