--- a/docs/use-the-network/devices/ready-to-use/mcf88/mcf-lw12met.mdx
+++ b/docs/use-the-network/devices/ready-to-use/mcf88/mcf-lw12met.mdx
@@ -22,8 +22,8 @@ Energy Metering with I/O
 
 ### Resources
 
-- [Product Page](https://www.mcf88.it/prodotto/mcf-lw12met/)
-- [Datasheet](https://www.mcf88.it/wp-content/uploads/2020/07/MCF-LW12MET.pdf)
+- [Product Page](https://enginko.com/en/solutions/mcf-lw12met/)
+- [Datasheet](https://enginko.com/wp-content/uploads/2020/09/MCF-LW12MET.pdf)
 
 ### Specifications
 
@@ -35,6 +35,7 @@ Energy Metering with I/O
 - power
 - time
 - digital input
+- digital output
 
 #### Dimensions:
 
