--- a/docs/use-the-network/devices/ready-to-use/mcf88/mcf-lw12terwp.mdx
+++ b/docs/use-the-network/devices/ready-to-use/mcf88/mcf-lw12terwp.mdx
@@ -22,8 +22,8 @@ outdoor environmental sensor
 
 ### Resources
 
-- [Product Page](https://www.mcf88.it/prodotto/mcf-lw12terwp/)
-- [Datasheet](https://www.mcf88.it/wp-content/uploads/2020/07/MCF-LW12TERWP.pdf)
+- [Product Page](https://enginko.com/en/solutions/mcf-lw12terwp/)
+- [Datasheet](https://enginko.com/wp-content/uploads/2020/09/MCF-LW12TERWP.pdf)
 
 ### Specifications
 
