--- a/docs/use-the-network/devices/ready-to-use/mcf88/mcf-lw12terpm.mdx
+++ b/docs/use-the-network/devices/ready-to-use/mcf88/mcf-lw12terpm.mdx
@@ -22,8 +22,8 @@ Outdoor sensor PM1/2.5/10
 
 ### Resources
 
-- [Product Page](https://www.mcf88.it/prodotto/mcf-lw12terpm/)
-- [Datasheet](https://www.mcf88.it/wp-content/uploads/2020/07/MCF-LW12TERPM.pdf)
+- [Product Page](https://enginko.com/en/solutions/mcf-lw12terpm/)
+- [Datasheet](https://enginko.com/wp-content/uploads/2020/09/MCF-LW12TERPM.pdf)
 
 ### Specifications
 
