--- a/docs/use-the-network/devices/ready-to-use/mcf88/mcf-lw13mio.mdx
+++ b/docs/use-the-network/devices/ready-to-use/mcf88/mcf-lw13mio.mdx
@@ -22,8 +22,8 @@ Multi I/O module
 
 ### Resources
 
-- [Product Page](https://www.mcf88.it/prodotto/mcf-lw13mio/)
-- [Datasheet](https://www.mcf88.it/wp-content/uploads/2020/07/MCF-LW13MIO.pdf)
+- [Product Page](https://enginko.com/en/solutions/mcf-lw13mio/)
+- [Datasheet](https://enginko.com/wp-content/uploads/2020/09/MCF-LW13MIO.pdf)
 
 ### Specifications
 
