--- a/docs/use-the-network/devices/ready-to-use/mcf88/mcf-lwws03.mdx
+++ b/docs/use-the-network/devices/ready-to-use/mcf88/mcf-lwws03.mdx
@@ -22,8 +22,8 @@ Weather station with PM
 
 ### Resources
 
-- [Product Page](https://www.mcf88.it/prodotto/mcf-lwws00/)
-- [Datasheet](https://www.mcf88.it/wp-content/uploads/2020/07/MCF-LWWS00-01.pdf)
+- [Product Page](https://enginko.com/en/solutions/mcf-lwws00/)
+- [Datasheet](https://enginko.com/wp-content/uploads/2020/09/MCF-LWWS00-01.pdf)
 
 ### Specifications
 
